// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a default blue variant of the Phase Banner 1`] = `
<div>
  <div
    class="container-max-width lbh-phase-banner"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-phase-banner__content__tag govuk-tag lbh-tag "
      >
        DEV
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        Development Environment
      </span>
    </p>
  </div>
</div>
`;

exports[`it renders a green variant of the Phase Banner 1`] = `
<div>
  <div
    class="container-max-width lbh-phase-banner"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-phase-banner__content__tag govuk-tag lbh-tag lbh-tag--green govuk-tag--green"
      >
        BETA
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        Production / Beta Environment
      </span>
    </p>
  </div>
</div>
`;

exports[`it renders a red variant of the Phase Banner 1`] = `
<div>
  <div
    class="container-max-width lbh-phase-banner"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-phase-banner__content__tag govuk-tag lbh-tag lbh-tag--red govuk-tag--red"
      >
        TEST
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        Test Environment
      </span>
    </p>
  </div>
</div>
`;

exports[`it renders a yellow variant of the Phase Banner 1`] = `
<div>
  <div
    class="container-max-width lbh-phase-banner"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-phase-banner__content__tag govuk-tag lbh-tag lbh-tag--yellow govuk-tag--yellow"
      >
        STAGING
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        Staging Environment
      </span>
    </p>
  </div>
</div>
`;
